Fix search button alignment

--- a/_sass/parts/search.scss
+++ b/_sass/parts/search.scss
@@ -16,7 +16,7 @@
     border-color: transparent;
     width: fit-content;
     position: absolute;
-    top: 1.6em;
+    top: 45%;
     left: 86%;
     cursor: pointer;
   }
